compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__guard_if_float.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let x = 1.0 case x { _ if x -> 1 }"
---
----- SOURCE CODE
let x = 1.0 case x { _ if x -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:27
  │
1 │ let x = 1.0 case x { _ if x -> 1 }
  │                           ^

Expected type:

    Bool

Found type:

    Float

error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:1:13
  │
1 │ let x = 1.0 case x { _ if x -> 1 }
  │             ^^^^^^^^^^^^^^^^^^^^^^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    _
