compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__guard_record_wrong_arity.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "type X { X(a: Int, b: Float) }\nfn x() {\n  case X(1, 2.0) { x if x == X(1) -> 1 }\n}"
---
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:3:3
  │
3 │   case X(1, 2.0) { x if x == X(1) -> 1 }
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

This case expression does not have a pattern for all possible values.
If it is run on one of the values without a pattern then it will crash.

The missing patterns are:

    _

error: Incorrect arity
  ┌─ /src/one/two.gleam:3:30
  │
3 │   case X(1, 2.0) { x if x == X(1) -> 1 }
  │                              ^^^^ Expected 2 arguments, got 1

This call accepts these additional labelled arguments:

  - a
  - b
